--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,28 +1,25 @@
-<nav class="navbar-color navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-    	
-    		
-    		
-    	<ul class="nav nav-tabs nav-justified ">
-    		<li class="presentation li-navbar-colors ">
+
+  <div class="row">
+    <div class="one">	
+    	<ul class="">
+    		<li class="two">
     			<a href="#">Om</a>
     		</li>
-    		<li class="presentation li-navbar-colors">
+    		<li class="two">
     			<a href="#">App</a>
     		</li>
     		
-    		<li class="presentation">
+    		<li class="two">
     			<a href="/"><h2 class="text-center logo-zweig-frontpage">ZWEIG</h2></a>
     		</li>
-    		<li class="presentation li-navbar-colors">
+    		<li class="two">
     			<a href="#">Login</a>
     		</li>
-    		<li class="presentation li-navbar-colors">
+    		<li class="two">
     			<a href="<%= new_user_path %>">Opret bruger</a>
     		</li>
     	</ul>
 
     </div>
   </div>
-</nav>
+
