--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,13 @@
+<br>
 <h5 class="text-center subheader">Din profil</h5>
+<p class="text-center help-text">Oprettet for <%= time_ago_in_words @user.created_at %> siden.</p>
 <hr>
-
+<div class="row">
+<div class="large-offset-1 large-8 columns">
+	
+</div>
+<div class="large-2 columns">
+	<button class="button">Rediger profil</button>
+	<button class="button">Opret værk</button>
+</div>
+</div>
